WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143048
[Streams API] Error storage should be moved from source to stream/reader
https://bugs.webkit.org/show_bug.cgi?id=143048
Summary
[Streams API] Error storage should be moved from source to stream/reader
youenn fablet
Reported
2015-03-25 07:07:13 PDT
Access to error goes through Reader now. It is thus more appropriate to move the error storage to the stream and not the source.
Attachments
Patch
(6.56 KB, patch)
2015-03-25 07:18 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Improving assert. Enabled case of creating ReadableStream with an empty source
(7.59 KB, patch)
2015-03-27 07:44 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2015-03-25 07:18:07 PDT
Created
attachment 249401
[details]
Patch
youenn fablet
Comment 2
2015-03-27 07:44:45 PDT
Created
attachment 249567
[details]
Improving assert. Enabled case of creating ReadableStream with an empty source
Benjamin Poulain
Comment 3
2015-03-27 16:03:53 PDT
Comment on
attachment 249567
[details]
Improving assert. Enabled case of creating ReadableStream with an empty source View in context:
https://bugs.webkit.org/attachment.cgi?id=249567&action=review
Ok
> Source/WebCore/bindings/js/ReadableStreamJSSource.cpp:73 > + ASSERT(exec->argument(0).isObject());
Let's use ASSERT_WITH_MESSAGE to better explain why should the first argument must exist and be an object at this point.
WebKit Commit Bot
Comment 4
2015-03-30 08:24:11 PDT
Comment on
attachment 249567
[details]
Improving assert. Enabled case of creating ReadableStream with an empty source Clearing flags on attachment: 249567 Committed
r182140
: <
http://trac.webkit.org/changeset/182140
>
WebKit Commit Bot
Comment 5
2015-03-30 08:24:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug